<resources>
    <string name="nav_drawer_open">Open drawer</string>
    <string name="nav_drawer_close">Close drawer</string>
    <string name="title_shop">Home</string>
    <string name="title_wishlist">Wish List</string>
    <string name="title_mycart">My Cart</string>
    <string name="title_coupons">My Coupons</string>
    <string name="title_myorders">My Orders</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">Contact Us</string>
    <string name="title_logout">Logout</string>
    <string name="title_login">Login</string>
    <string name="title_profile">Profile</string>
    <string name="title_categories">Categories</string>
    <string name="reservating_time_slots">Reserving Time Slot</string>
    <string name="title_groups">Groups</string>
    <string name="title_available_time_slots">Available Time Slots</string>
    <string name="select_delivery_date">Please select a delivery date</string>
    <string name="title_polls">Opinions</string>
    <string name="title_poll">Opinion</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="title_new_product">New Product</string>
    <string name="title_change_vendor">Change Seller</string>
    <string name="generic_server_timeout">Server Timeout</string>
    <string name="generic_server_down">Server Down</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="no_internet">Not connected to internet</string>
    <string name="no_network_connection">Unable to connect to network</string>
    <string name="parsing_failed">Parse Error</string>
    <string name="generic_error">Seems like some problem here</string>
    <string name="some_problem_occurred">Some problem occurred</string>
    <string name="loading_products">Loading products..</string>
    <string name="loading_vendors">Loading Vendors..</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="my_notifications">Notification</string>
    <string name="change_platform">Change Platform</string>
    <string name="demo_version">This is a demo version.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="loading_available_countries">Loading available countries</string>
    <string name="loading_available_states">Loading available States</string>
    <string name="loading_available_cities">Loading available Cities</string>
    <string name="loading_available_districts">Loading available Districts</string>
    <string name="loading_available_subdistricts">Loading available Sub Districts</string>
    <string name="loading_available_province">Loading available Province</string>
    <string name="invalid_postal_code">Invalid Postal Code</string>
    <string name="invalid_contact_number">Invalid Contact Number</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_first_name">Invalid First Name</string>
    <string name="invalid_last_name">Invalid Last Name</string>
    <string name="invalid_shop_name">Invalid Shop Name</string>
    <string name="invalid_shop_address">Invalid Shop Address</string>
    <string name="invalid_city">Invalid City</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="error_updating_customer_data">Error updating customer data on server.</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="edit">Edit</string>
    <string name="loading_seller_info">Loading seller info…</string>
    <string name="my_addresses">My Addresses</string>
    <string name="subdistrict">Sub District</string>
    <string name="province">Province</string>
    <string name="postcode">Postcode</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="shipping_as_billing_address">Use Billing Address as my Shipping Address</string>
    <string name="update">Update</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="add_billing_address">Add Billing Address</string>
    <string name="text_autofill">My Location</string>
    <string name="basic_details">Basic Details:</string>
    <string name="updating">Updating..</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Register</string>
    <string name="action_sign_up_title">New User</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="login_failed">Login failed. Some problem occurred.</string>
    <string name="password_required">Password required.</string>
    <string name="passwords_mismatch">Passwords does not match.</string>
    <string name="google_signin_failed">Google sign in failed</string>
    <string name="or">OR</string>
    <string name="sign_in_1_click">Sign in with a single click:</string>
    <string name="facebook_access_canceled">Facebook Access Cancelled</string>
    <string name="signing_in">Signing in…</string>
    <string name="signing_up">Signing up…</string>
    <string name="retrieving">Retrieving…</string>
    <string name="whatsapp_install_error">WhatsApp is not installed!</string>
    <string name="whatsapp_tutorial">You can take opinion from your friends before purchasing.</string>
    <string name="keep_shopping">Keep Shopping</string>
    <string name="keep_shopping_cart">Keep Shopping</string>
    <string name="no_items_in_wishlist">No items in your Wish List.</string>
    <string name="label_quantity">Qty:</string>
    <string name="loading_checking_app_id">Checking app ID</string>
    <string name="loading_product_details">Loading product details</string>
    <string name="product_not_for_sale">This Product is not for Sale.</string>
    <string name="empty_category">No products found in this category</string>
    <string name="view_cart">View cart</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="loading">Loading…</string>
    <string name="select_payment">Select Payment</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="no_products">No products</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_cart">Cart</string>
    <string name="menu_title_wishlist">Wishlist</string>
    <string name="select_wishlist">Select Wishlist to Add</string>
    <string name="create_wishlist_message">Create New List Here</string>
    <string name="menu_title_mycoupons">My Coupons</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_call">Call</string>
    <string name="menu_title_opinion">Opinions</string>
    <string name="send_email">Send email…</string>
    <string name="loading_ui">Loading UI..</string>
    <string name="powered_by_tm_store">Powered by: TM Store</string>
    <string name="address_not_set">Address not set</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="track_order">Track Order</string>
    <string name="please_wait">Please wait…</string>
    <string name="msg_cancel_order">Are you sure you want to cancel the selected order?</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="loading_store_settings">Loading store Settings..</string>
    <string name="checking_app_data">Checking app data..</string>
    <string name="error_loading_data">Error while loading app data!</string>
    <string name="error_retrieving_product">Error while retrieving product!</string>
    <string name="error_no_file_explorer">Please install File Explorer!</string>
    <string name="service_not_active">Service not active!</string>
    <string name="outdated_version">Version outdated! Please update app to latest version.</string>
    <string name="parse_object_error">Parse object error!</string>
    <string name="title_dialog_update">Update Available</string>
    <string name="update_message_forcefully">You need to update App to latest version to continue.</string>
    <string name="update_message_ask">New update is available. Do you want to update to latest version now?</string>
    <string name="later">Later</string>
    <string name="update_now">Update Now</string>
    <string name="fetching_product_info">Fetching requested product info..</string>
    <string name="signin_failed">Sign-in failed!</string>
    <string name="updating_session">Updating session..</string>
    <string name="no_data">No Data</string>
    <string name="product_not_available">Product not available.</string>
    <string name="category_not_available">Category not available.</string>
    <string name="explore_now">Explore Now</string>
    <string name="no_product_or_sub_category">No product or sub category available</string>
    <string name="outdated_product">This product is outdated.</string>
    <string name="remove_from_cart">Tap to remove from cart.</string>
    <string name="label_delivery_details">Delivery details:</string>
    <string name="title_pay">Pay</string>
    <string name="title_card_number">Card Number</string>
    <string name="title_card_cvv">CVV</string>
    <string name="title_card_expiry_month">Expiry month</string>
    <string name="title_card_expiry_year">Expiry year</string>
    <string name="title_total_amount">Total amount:</string>
    <string name="hint_card_number">1234567812345678</string>
    <string name="hint_card_cvv">123</string>
    <string name="hint_card_expiry_month">MM</string>
    <string name="hint_card_expiry_year">YY</string>
    <string name="saved_cards">Saved cards</string>
    <string name="add_new_card">Add new card</string>
    <string name="save_card_details">Save card details</string>
    <string name="text_delivery_date">Delivery Date : %s</string>
    <string name="text_delivery_time">Delivery Time : %s</string>
    <string name="text_delivery_status">Delivery Status : %s</string>
    <string name="text_delivery_receiver">Delivery Receiver : %s</string>
    <string name="text_bill_number">Bill Number : %s</string>
    <string name="text_bill_date">Bill date: %s</string>
    <string name="text_bill_time">Bill Time : %s</string>
    <string name="text_order_weight">Order Weight : %s</string>
    <string name="text_order_origin">Order Origin : %s</string>
    <string name="text_order_destination">Order Destination : %s</string>
    <string name="text_shipper_name">Shipper Name : %s</string>
    <string name="text_shipper_address">Shipper Address : %s</string>
    <string name="text_shipper_city">Shipper City : %s</string>
    <string name="text_receiver_name">Receiver Name : %s</string>
    <string name="text_receiver_address">Receiver Address : %s</string>
    <string name="text_receiver_city">Receiver City : %s</string>
    <string name="label_deposit_fixed">The deposit is %s per article</string>
    <string name="message_deposit_full">For immediate payment</string>
    <string name="pay_deposit">Pay Deposit</string>
    <string name="pay_full">Pay full</string>
</resources>