<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textStyle="bold"
            tools:text="@string/title_total_amount" />

        <TextView
            android:id="@+id/text_total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:textStyle="bold"
            tools:text="$1.0" />

    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_saved_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/title_saved_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/saved_cards"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_saved_cards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/title_add_new_card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/normal_text_color"
                android:visibility="gone"
                tools:text="@string/add_new_card" />

            <LinearLayout
                android:id="@+id/new_card_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/title_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/title_card_number"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_card_number"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:maxLength="16"
                    android:maxLines="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/title_card_cvv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_card_cvv"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/edit_card_cvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/hint_card_cvv"
                            android:textSize="14sp"
                            android:inputType="number"
                            android:maxLength="3"
                            android:maxLines="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/title_card_expiry_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_card_expiry_month"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/edit_card_expiry_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/hint_card_expiry_month"
                            android:inputType="number"
                            android:textSize="14sp"
                            android:maxLength="2"
                            android:maxLines="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_card_expiry_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_card_expiry_year"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edit_card_expiry_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/hint_card_expiry_year"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="14sp"
                            android:maxLines="1" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/chk_save_card_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/save_card_details"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_pay" />

</LinearLayout>